--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ npm-debug.log
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+# Google Service Account Key File
+service-account.json
+
+# Environment variable settings
+.env
